# learnhouse

./: .dockerignore  .env.example  .gitattributes  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  NEON_SETUP.md  README.md  SELECTIVE_UPDATES_GUIDE.md  SELF_HOSTING.md  app.py  codecov.yml  docker-compose.prod.yml  docker-compose.yml  env.example  package-lock.json  package.json  pnpm-lock.yaml  renovate.json  requirements.txt  turbo.json
apps/api/: .env.example  .gitignore  Dockerfile  alembic.ini  app.py  cli.py  docker-entrypoint.sh  launch.json  package.json  pyproject.toml  requirements.txt  vercel.json
apps/api/config/: config.py  config.yaml
apps/api/ee/: hooks.py
apps/api/ee/db/: audit_logs.py  scorm.py  sso.py
apps/api/ee/db/payments/: payments.py  payments_courses.py  payments_enrollments.py  payments_groups.py  payments_offers.py  payments_products.py  payments_users.py
apps/api/ee/middleware/: audit.py
apps/api/ee/routers/: audit_logs.py  cloud_internal.py  info.py  payments.py  scorm.py  sso.py  superadmin.py
apps/api/ee/services/: audit.py
apps/api/ee/services/payments/: README.md  payments_access.py  payments_config.py  payments_courses.py  payments_customers.py  payments_enrollments.py  payments_groups.py  payments_moyasar.py  payments_offers.py  payments_products.py  payments_stripe.py  payments_stripe_dashboard.py  payments_users.py  provider_interface.py  provider_registry.py
apps/api/ee/services/scorm/: __init__.py  scorm.py  scorm_runtime.py
apps/api/ee/services/sso/: __init__.py  sso.py
apps/api/logs/: .vercel-keep
apps/api/migrations/: env.py  payments_to_offers_migration.py  script.py.mako
apps/api/migrations/orgconfigs/: orgconfigs_migrations.py  v0tov1.py  v1_1.py
apps/api/migrations/versions/: 0314ec7791e1_payments.py  040ccb1d456e_add_thumbnail_image_to_orgs.py  4a88b680263c_multi_contributors.py  5e3a9c7f1b2d_secure_media_storage_and_share_tokens.py  6295e05ff7d0_enum_updates.py  7f2b9d1c3e4a_merge_secure_media_and_drop_collections.py  83b6d9d6f57a_org_ids_cascades.py  87a621284ae4_organizations_new_model.py  9e031a0358d1_video_thumbnails.py  a1b2c3d4e5f6_add_api_tokens.py  a1b2c3d4e5f6_add_missing_performance_indexes.py  a1b2c3d4e5f6_add_sso_connection.py  a1b2c3d4e5f7_add_manually_graded_to_task_submission.py  a5afa69dd917_activity_details.py  a6b7c8d9e0f1_add_is_archived_to_course.py  a6b7c8d9e0f1_add_lock_type_to_chapter_and_activity.py  a6b7c8d9e0f2_add_community_moderation_settings.py  a8b9c0d1e2f3_widen_apitoken_hash.py  adb944cc8bec_add_users_details_and_profile.py  b2c3d4e5f6a7_add_audio_activity_subtype.py  b2c3d4e5f8a9_add_custom_assignment_type.py  b3c4d5e6f7a8_add_course_seo_field.py  b7c8d9e0f1g2_add_calendar_event_table.py  b7c8d9e0f3a4_cascade_user_fks.py  c1d2e3f4a5b6_rename_paymentsmode_enum.py  c4d5e6f7a8b9_add_course_published_field.py  c8d9e0f3a4b5_add_assignment_retries.py  c8d9e0f4a5b6_add_extra_metadata_fields.py  cb2029aadc2d_cloud_changes.py  d3e4f5a6b7c8_add_missing_performance_indexes.py  d4e5f6a7b8c9_drop_collections_tables.py  d8bc71595932_add_reference_for_assignmenttasks.py  df2981bf24dd_initial_migration.py  e5f6a7b8c9d0_add_activity_versioning.py  e6f7a8b9c0d1_merge_heads.py  eb10d15465b3_org_scripts.py  f6a7b8c9d0e1_add_podcasts.py  f7a8b9c0d1e2_folders_and_media.py  f8a3c2d1e5b7_add_scorm_activity_types.py  g7b8c9d0e1f2_add_auth_security_fields.py  (+22 more)
apps/api/scripts/: migrate.py  migrate_org_config_podcasts.py  migrate_podcasts.py  migrate_roles_communities.sql  migrate_roles_for_communities.py  migrate_roles_podcasts.py
apps/api/src/: router.py
apps/api/src/core/: deployment_mode.py  ee_hooks.py  redis.py
apps/api/src/core/events/: autoinstall.py  content.py  database.py  events.py  logs.py  sentry.py
apps/api/src/core/middleware/: cors.py
apps/api/src/db/: activities.py  api_tokens.py  assignments.py  billing_usage.py  blocks.py  boards.py  calendar_events.py  chapter_activities.py  chapters.py  code_submissions.py  collections.py  collections_courses.py  course_authors.py  course_chapters.py  course_embeddings.py  courses.py  custom_domains.py  install.py  organization_config.py  organization_settings.py  organizations.py  packs.py  playground_reactions.py  playgrounds.py  resource_authors.py  roles.py  superadmin_api_tokens.py  trail_runs.py  trail_steps.py  trails.py  user_organizations.py  usergroup_resources.py  usergroup_ressources.py  usergroup_user.py  usergroups.py  users.py  webhooks.py
apps/api/src/db/communities/: __init__.py  communities.py  discussion_comment_votes.py  discussion_comments.py  discussion_reactions.py  discussion_votes.py  discussions.py
apps/api/src/db/courses/: activities.py  activity_versions.py  assignments.py  blocks.py  certifications.py  chapter_activities.py  chapters.py  course_chapters.py  course_updates.py  courses.py
apps/api/src/db/docs/: docgroups.py  docpages.py  docsections.py  docspaces.py
apps/api/src/db/folders/: folder_content.py  folders.py
apps/api/src/db/media/: media.py  media_share_token.py
apps/api/src/db/payments/: payments.py  payments_courses.py  (+2 more)
apps/api/src/jobs/: kb_sync.py
apps/api/src/routers/: admin.py  analytics.py  api_tokens.py  auth.py  blocks.py  calendar.py  code_execution.py  code_submissions.py  content_files.py  dev.py  health.py  instance.py  local_content.py  monitoring.py  og_activity.py  orgs.py  plans.py  psp_auth.py  roles.py  search.py  stream.py  trail.py  usergroups.py  users.py  utils.py  webhooks.py
apps/api/src/security/: api_token_utils.py  auth.py  communities_security.py  courses_security.py  csrf.py  file_validation.py  org_auth.py  podcasts_security.py  security.py  superadmin.py
apps/api/src/tests/: conftest.py  test_main.py  test_root_router.py
apps/mcp/: .env.example  Dockerfile  README.md  pyproject.toml
apps/mcp/src/learnhouse_mcp/: __init__.py  __main__.py  atlas_context.py  auth.py  cache.py  client.py  config.py  errors.py  lh_client.py  markdown.py  middleware.py  runtime.py  schemas.py  server.py
apps/mcp/tests/: test_markdown.py
(+2526 files in other folders)
