[project]
description = "Learnhouse Backend"
name = "learnhouse-api"
version = "1.1.4"
requires-python = ">=3.14.3,<3.14.4"
authors = [
    {name = "Badr B. (swve)"}
]
dependencies = [
    "boto3==1.42.93",
    "botocore==1.42.93",
    "faker==40.15.0",
    "fastapi==0.136.0",
    "httpx==0.28.1",
    "google-genai==1.73.1",
    "pwdlib[argon2]==0.3.0",
    "psycopg2-binary==2.9.12",
    "pydantic[email]==2.13.3",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.26",
    "pyyaml==6.0.3",
    "redis==7.4.0",
    "requests==2.33.1",
    "resend==2.29.0",
    "sqlmodel==0.0.38",
    "tiktoken==0.12.0",
    "uvicorn==0.45.0",
    "typer==0.24.1",
    "alembic==1.18.4",
    "alembic-postgresql-enum==1.10.0",
    "sqlalchemy-utils==0.42.1",
    "stripe==15.0.1",
    "cryptography==46.0.7",
    "pyjwt[crypto]==2.12.1",
    "beautifulsoup4==4.14.3",
    "pytest-asyncio==1.3.0",
    "sentry-sdk[fastapi]==2.58.0",
    "protobuf==7.34.1",
    "workos==6.0.5",
    "dnspython==2.8.0",
    "defusedxml==0.7.1",
    "llama-index-core==0.14.21",
    "pgvector==0.4.2",
    "pypdf==6.10.2",
]

[tool.ruff]
lint.ignore = ["E501", "E712"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark test as async",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore:.*crypt.*deprecated.*",
    "ignore:.*utcnow.*deprecated.*",
    "ignore:.*Instrumentation will have no effect.*",
    "ignore:.*handler names should be lower-case.*",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/tests/*",
    "src/services/ai/*",
    "src/routers/ai/*",
    "src/routers/code_execution.py",
    "src/routers/stream.py",
]

[tool.coverage.report]
fail_under = 25
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]
