[project]
description = "Learnhouse Backend"
name = "learnhouse-api"
version = "1.2.7"
requires-python = ">=3.14.3,<3.14.4"
authors = [
    {name = "Badr B. (swve)"}
]
dependencies = [
    "boto3==1.43.33",
    "botocore==1.43.33",
    "faker==40.23.0",
    "fastapi==0.137.2",
    "httpx==0.28.1",
    "google-genai==2.9.0",
    "pydantic-ai-slim[openai,anthropic,google,mistral]==1.107.0",
    "pwdlib[argon2]==0.3.0",
    "psycopg2-binary==2.9.12",
    "asyncpg==0.31.0",
    "aiosqlite==0.22.1",
    "pydantic[email]==2.13.4",
    "pytest==9.1.0",
    "pytest-cov==7.1.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "pyyaml==6.0.3",
    "redis==8.0.0",
    "requests==2.34.2",
    "resend==2.32.2",
    "sqlmodel==0.0.38",
    "tiktoken==0.13.0",
    "uvicorn==0.49.0",
    "typer==0.26.7",
    "alembic==1.18.4",
    "alembic-postgresql-enum==1.10.0",
    "sqlalchemy-utils==0.42.1",
    "stripe==15.2.1",
    "cryptography==48.0.1",
    "pyjwt[crypto]==2.13.0",
    "beautifulsoup4==4.15.0",
    "pytest-asyncio==1.4.0",
    "sentry-sdk[fastapi]==2.63.0",
    "protobuf==7.35.1",
    "workos==8.2.0",
    "dnspython==2.8.0",
    "defusedxml==0.7.1",
    "llama-index-core==0.14.22",
    "pgvector==0.4.2",
    "pypdf==6.13.3",
]

[tool.ruff]
lint.ignore = ["E501", "E712"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark test as async",
    "ollama: live test that requires a local Ollama server (opt-in; skipped if unreachable)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore:.*crypt.*deprecated.*",
    "ignore:.*Instrumentation will have no effect.*",
    "ignore:.*handler names should be lower-case.*",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/tests/*",
    "src/services/ai/*",
    "src/routers/ai/*",
    "src/routers/code_execution.py",
    "src/routers/stream.py",
]

[tool.coverage.report]
fail_under = 25
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]
