[project]
name = "learnhouse-mcp"
version = "0.1.0"
description = "LearnHouse Atlas MCP server"
requires-python = ">=3.14.3,<3.14.4"
authors = [
    {name = "Badr B. (swve)"}
]
dependencies = [
    "mcp==1.27.0",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "markdown-it-py==3.0.0",
    "starlette==0.51.0",
    "uvicorn==0.46.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
]

[project.scripts]
learnhouse-mcp = "learnhouse_mcp.__main__:main"

[tool.ruff]
lint.ignore = ["E501", "E712"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/learnhouse_mcp"]
